# ritual

./: .gitignore  Cargo.toml  example.yaml
src/: config.rs  file.rs  main.rs  message.rs  project.rs  server.rs  watcher.rs
