[package]
name = "ritual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.2"
bytes = "1.4.0"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
tokio = { version = "1.26.0", features = ["full"] }
